# spdm

./: .clang-format  .devcontainer.json  .env  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.en.md  README.md  README.zh.md  pyproject.toml  requirements.txt  setup.py  spdm-0.3.0-GCCcore-12.2.0-Python-3.10.8.eb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  server.patch
data/: test.xml
docs/: APIReference.rst  Design.md  Design.rst  Makefile  SciData.ipynb  SciData_0.2  TimeSeriesAoS.md  Tips.md  conf.py  index.rst  spdb_log.drawio
easybuild/: spdm-0.3.1-GCCcore-12.2.0-Python-3.10.8.eb
examples/: demo_collection.py  demo_connection.py  demo_contours.py  demo_db.py  demo_east.py  demo_entry.py  demo_eq.py  demo_file.py  demo_file_db.py  demo_function.ipynb  demo_function.py  demo_geqdsk.py  demo_hdf5.py  demo_imas.py  demo_mapping.ipynb  demo_mapping.py  demo_mdslocal.py  demo_module.ipynb  demo_module.py  demo_mongodb.py  demo_node.py  demo_path.py  demo_plot_proflies.py  demo_profiles.py  demo_read.py  demo_read_gfile.py  demo_request.py  demo_serialize.py  demo_sp_properties.py  demo_sp_property.py  demo_util.ipynb  demo_wall.ipynb  demo_wall.py  demo_xml.py  example.cpp  example_entry.py  geqdsk.py  imas.ipynb  imas_example.ipynb  imas_util.py  (+7 more)
obsolete/: Annotation.py  AoS.py  AttributeTree.py  DataType.py  Dict.py  Edge copy.py  GEQdsk.py  HDF5.py  Handler.py  JSON.py  List.py  LocalCommand.py  NetCDF.py  PhysicalGraph.py  Plugin.py  PluginIMAS.py  Plugins.py  Profiles.py  Server.py  SpBag.py  SpURI.py  Table.py  bvp.py  find_peaks.py  namelist.py  numpy_file.py  optimize.py  smooth.py  spline.py  test_util_profile.py
python/: requirements.txt  setup.py
source/: Array.h  Attributes.cpp  Attributes.h  CMakeLists.txt  Collection.h  Cursor.h  DB.h  DataBase.cpp  DataBase.h  DataBlock.h  DataType.h  Document.h  Entry.cpp  Entry.h  EntryCursor.h  EntryImpl.cpp  EntryImpl.h  EntryInterface.cpp  EntryInterface.h  EntryJSON.cpp  EntryMemory.cpp  EntryPlugin.h  EntryXML.cpp  EntryXML.h  Entry_old.cpp  ExpressionTemplate.h  HierarchicalData.h  HierarchicalTree.h  HierarchicalTreeAlgorithm.h  Iterator.h  Node.cpp  Node.h  Node_Impl.h  Range.h  SpDB.cpp  SpDB.h  SpDBHandler.cpp  SpDBMapper.cpp  SpDBMapper.h  SpDBObject.h  (+27 more)
source/c_interface/: sp_entry.h
source/db/: Array.h  CMakeLists.txt  Collection.h  Common.h  Cursor.h  DataBase.h  DataBlock.cpp  DataBlock.h  Document.cpp  Document.h  Entry.cpp  Entry.h  EntryCursor.h  EntryPlugin.cpp  EntryPlugin.h  HierarchicalNode.h  HierarchicalTree.h  Node.cpp  Node.h  NodeOps.cpp  NodeOps.h  NodePlugin.cpp  NodePlugin.h  Schema.cpp  Schema.h  XPath.cpp  XPath.h
source/db/plugins/: CMakeLists.txt  EntryHDF5.cpp  EntryJSON.cpp  EntryMemory.cpp  EntryXML.cpp  SpDBHandler.cpp
source/db/sax/: HDF5Common.cpp  HDF5Common.h  SpDM.h  SpDMHDF5.cpp
source/old/: Array.h  Array_test.cpp  Array_traits_test.cpp  Attributes.h  CMakeLists.txt  DAGExecutor.cpp  DAGraph.cpp  DAGraph.h  DAGraphUtility.h  ExpressionTemplate.h  HDF5Common.cpp  Macro.h  Range.h  SpDM.h  SpDMBlock.h  SpDMFactory.h  SpDMHDF5.cpp  SpDMHDF5.h  SpDMIOStream.h  SpDMJSON.h  SpDMSAX.h  SpDMXDMF.h  SpDMXML.h  SpDM_test.cpp  SpDM_test.h  Status.h  TypeTraits.h  array_dummy.cpp  nTuple.h  nTuple_test.cpp  nTuple_traits_test.cpp  spdm.puml  spdm_dummy.cpp  spdm_serialize.cpp  traits_test.cpp
source/old/dag/: DAGExecutor.cpp  DAGExecutor.h  DAGraphUtility.cpp  DAGraphUtility.h  DAGraph_dummy.cpp
source/plugins/: CMakeLists.txt  EntryHDF5.cpp  EntryJSON.cpp  EntryMDSplus.cpp  EntryMapping.cpp  EntryMemory.cpp  EntryPlugin.h  EntryXML.cpp  EntryYAML.cpp  PluginHDF5.cpp  PluginMapping.cpp  PluginProxy.cpp  PluginXML.cpp  SpDBProxy.cpp
source/utility/: CMakeLists.txt  Cursor.h  ExpressionTemplate.h  Factory.h  HierarchicalNode.h  HierarchicalTree.h  Iterator.h  Logger.cpp  Logger.h  Path.cpp  Path.h  Range.h  Signal.h  TypeTraits.h  URL.cpp  URL.h  UUID.cpp  fancyStream.h  fancy_print.h  ndArray.h
tests/: CMakeLists.txt  test_cursor.cpp  test_data_collection.py  test_data_pointer.py  test_document.cpp  test_entry.cpp  test_hdata.cpp  test_hdf5.cpp  test_imas_east_mapper.cpp  test_imas_east_pf_active.cpp  test_imas_east_wall.cpp  test_iterator.cpp  test_mapping.cpp  test_node.cpp  test_proxy.cpp  test_xml.cpp  test_yaml.cpp
tests/cpp/: CMakeLists.txt
tests/data/: equilibrium.xml  test.xml
tests/obsolete/: test_dict.py  test_func.py
tests/python/: test_GeoObject.py  test_attribute_tree.py  test_data_aos.py  test_data_attribute_tree.py  test_data_collection.py  test_data_dobject.py  test_data_entry.py  test_data_field.py  test_data_file.py  test_data_function.py  test_data_node.py  test_data_node_list.py  test_data_profiles.py  test_data_quantity.py  test_data_sp_property.py  test_data_timeseries.py  test_data_xml.py  test_entry.py  test_entry_basic.py  test_entry_combiner.py  test_entry_map.py  test_file.py  test_file_hdf5.py  test_file_xml_read.py  test_geometry.py  test_grid.py  test_list.py  test_node.py  test_path.py  test_profiles.py  test_query.py  test_sp_property.py  test_util_lazyproxy.py  test_util_profile.py  test_util_ref_resolver.py  test_util_spobject.py
tests/python/core/: test_domain.py  test_entry.py  test_entry_combiner.py  test_entry_map.py  test_entry_xml.py  test_expression.py  test_field.py  test_file_hdf5.py  test_function.py  test_htree.py  test_path.py  test_sp_property.py
tests/python/data/: pf_active.xml  test_expression.py  test_field.py  test_function.py  test_htree.py  test_path.py  test_sp_property.py
tests/python/geometry/: test_geometry.py
tests/python/numlib/: test_calculus.py
tests/python/obsolete/: test_GeoObject.py  test_data_aos.py  test_data_attribute_tree.py  test_data_collection.py  test_data_dobject.py  test_data_field.py  test_data_file.py  test_data_gfile.py  test_data_node2.py  test_data_profiles.py  test_data_quantity.py  test_data_timeseries.py  test_util_spobject.py
tests/python/utils/: test_pluggable.py  test_tree.py  test_typing.py
tests/python/view/: test_view.py
(+670 files in other folders)
