[project]
name = "spdb"

version = "0.3.0"

readme = "README.md"

license = { file = "LICENSE.txt" }


description = "A ontology base data integration tool."

classifiers = [
    "Development Status :: 0 - Beta",
    "Intended Audience :: Plasma Physicists",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

requires-python = ">=3.10"

dependencies = [
    "f90nml",
    "h5py",
    "netcdf4",
    "json",
    "pyyaml",
    "lxml",
    "numpy",
    "scipy",
    "sympy",
    "scikit_image",
    "matplotlib",
]

[tool.setuptools]
# ...
package-dir = { "" = "python" }

[tool.setuptools.packages.find]

where = ["python"]
exclude = [
    "*.obsolete",
    "*.obsolete.*",
    "*.todo",
    "*.todo.*",
    "*.tests",
]

namespaces = true


[build-system]
requires = ["setuptools>=61.0"]
