SET(HDF5_PREFER_PARALLEL OFF)
SET(HDF5_USE_STATIC_LIBRARIES OFF)
FIND_PACKAGE(HDF5 1.8 COMPONENTS C HL REQUIRED)
if(HDF5_FOUND AND NOT TARGET HDF5::HDF5)
    add_library(HDF5::HDF5 UNKNOWN IMPORTED)
    set_target_properties(HDF5::HDF5 PROPERTIES
            IMPORTED_LINK_INTERFACE_LANGUAGES "C"
            INTERFACE_LINK_LIBRARIES "${HDF5_C_LIBRARIES}"
            INTERFACE_INCLUDE_DIRECTORIES "${HDF5_INCLUDE_DIR}"
            )
endif()

MESSAGE(STATUS ${HDF5_INCLUDE_DIR})
#add_library(SpDMBackend  SpDMHDF5.cpp   )
#target_include_directories(SpDMBackend PRIVATE ${HDF5_INCLUDE_DIR})
#target_link_libraries(SpDMBackend PRIVATE SpDM  ${HDF5_C_LIBRARIES})